...
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Edit Text for entering the comment -->
    <EditText
        android:id="@+id/comment_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="Enter your comment here..."
        android:inputType="textMultiLine"
        android:minHeight="150dp"
        android:background="@color/white"
...
            android:textSize="24dp"
            android:layout_weight="1"
            android:backgroundTint="@color/button_color"/>

        <!-- OK Button -->
        <Button
            android:id="@+id/ok_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Okay"
            android:textSize="24dp"
            android:layout_weight="1"
            android:backgroundTint="@color/button_color"/>
...
