...
        android:layout_height="wrap_content"
        android:background="@color/mood_default_color"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_mood_x_button" />

    <TextView
        android:id="@+id/view_mood_date_time_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
...
        app:layout_constraintHorizontal_bias="0.471"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_mood_photo_view"
        app:layout_constraintVertical_bias="0.0" />

    <ImageButton
        android:id="@+id/view_mood_edit_button"
        android:layout_width="96dp"
        android:layout_height="81dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="40dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="Edit mood event"
...
