...

    <Button
        android:id="@+id/photo_upload_gallery_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/button_color"
        android:text="Upload from Gallery" />

    <Button
        android:id="@+id/photo_upload_camera_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/button_color"
        android:text="Take Photo" />
</LinearLayout>
